# md-kb

./: .coverage  .env.example  .gitignore  AGENTS.md  LICENSE  POSTGRES_SETUP.md  README.md  pyproject.toml  test_logging.py
md_kb/: __init__.py  __main__.py  cli.py  config.py  database.py  embeddings.py  indexer.py  jsonrpc_server.py  mcp_server.py  models.py  watcher.py
tests/: conftest.py  test_config.py  test_database.py  test_embeddings.py  test_indexer.py  test_integration.py  test_mcp_server.py  test_models.py
tests/fixtures/sample_markdown/: doc1.md  doc2.md
tests/fixtures/sample_markdown/subdir/: doc3.md
